All tests for member form are passing

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,6 +3,9 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
+  <div><%= f.label :level %><br />
+  <%= f.text_field :level %></div>
+
   <div><%= f.label :contact_name %><br />
   <%= f.text_field :contact_name, :autofocus => true %></div>
 
@@ -12,27 +15,35 @@
   <div><%= f.label :organisation_name %><br />
   <%= f.text_field :organisation_name %></div>
 
+  <div><%= f.label :phone %><br />
+  <%= f.text_field :phone %></div>
+  
+  <div><%= f.label :address_line1 %><br />
+  <%= f.text_field :address_line1 %></div>
 
+  <div><%= f.label :address_line2 %><br />
+  <%= f.text_field :address_line2 %></div>
 
-#  fill_in('member_email',                 :with => 'iain@foobar.com')
-#  fill_in('member_organisation_name',     :with => 'FooBar Inc')
-#  fill_in('member_phone',                 :with => '0121 123 446')
-#  fill_in('member_address_line1',         :with => '123 Fake Street')
-#  fill_in('member_address_line2',         :with => 'Fake place')
-#  fill_in('member_address_city',          :with => 'Faketown')
-#  fill_in('member_address_region',        :with => 'Fakeshire')
-#  fill_in('member_address_country',       :with => 'UK')
-#  fill_in('member_address_postcode',      :with => 'FAKE 123')
-#  fill_in('member_tax_number',            :with => '213244343')
-#  fill_in('member_purchase_order_number', :with => 'PO-43243242342')
-  #fill_in('member_agreed_to_terms'        = true)
+  <div><%= f.label :address_city %><br />
+  <%= f.text_field :address_city %></div>
 
+  <div><%= f.label :address_region %><br />
+  <%= f.text_field :address_region %></div>
 
+  <div><%= f.label :address_country %><br />
+  <%= f.text_field :address_country %></div>
 
+  <div><%= f.label :address_postcode %><br />
+  <%= f.text_field :address_postcode %></div>
 
+  <div><%= f.label :tax_number %><br />
+  <%= f.text_field :tax_number %></div>
 
+  <div><%= f.label :purchase_order_number %><br />
+  <%= f.text_field :purchase_order_number %></div>
 
-
+  <div><%= f.label :agreed_to_terms %><br />
+  <%= f.check_box :agreed_to_terms %></div>
 
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
@@ -40,7 +51,7 @@
   <div><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div><%= f.submit "Sign up", :id => 'submit' %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
