--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,25 +1,57 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-horizontal' }) do |f| %>
   <%= devise_error_messages! %>
+  
+  <fieldset>
+  
+    <legend>Account Details</legend>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+    <div class="control-group">
+  		<%= f.label :email, :class => 'control-label' %>
+  		<div class="controls">
+  			<%= f.email_field :email %>
+  		</div>
+  	</div>
+  
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
+  
+    <div class="control-group">
+  		<%= f.label :password, :class => 'control-label' %>
+  		<div class="controls">
+  			<%= f.password_field :password %>
+  		</div>
+  	</div>
+  
+    <div class="control-group">
+  		<%= f.label :password_confirmation, :class => 'control-label' %>
+  		<div class="controls">
+  			<%= f.password_field :password_confirmation %>
+  		</div>
+  	</div>
+  
+  </fieldset>
+  
+  <fieldset>
+    <legend>Your details</legend>
+    
+    <%= render :partial => 'member_details', :locals => { :f => f } %>
+  </fieldset>
+  
+  <fieldset>
+    <div class="control-group">
+      <%= f.label :current_password, :class => 'control-label' %><span class="help-inline">(we need your current password to confirm your changes)</span>
+      <div class="controls">
+        <%= f.password_field :current_password %>
+      </div>
+    </div>
+  </fieldset>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
-
-  <div><%= f.submit "Update" %></div>
+  <div class="form-actions">
+    <%= f.submit "Update", :id => 'submit', :class => 'btn btn-primary' %>
+  </div>
 <% end %>
 
 <h3>Cancel my account</h3>
