Add member directory brand and change logo link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <header id="header">
     	<div class="container">
     		<div class="branding">
-    	  	<a id="logo" rel="home" title="Home" href="http://theodi.org/">
+    	  	<a id="logo" rel="home" title="Home" href="/">
     				<img width="131" height="54" class="b_png" alt="Home" src="http://theodi.org/sites/default/files/logo.png">
     			</a>
     			<hgroup id="name-and-slogan">
@@ -29,7 +29,7 @@
     			<div id="mainnav" class="navbar navbar-inverse">
     				<div class="navbar-inner">
     					<ul class="nav">
-    						<a class="brand" href="#">Bootstrap</a>
+    						<a class="brand" href="#">Member Directory</a>
     						<li class="active"><a href="#typography">Typography</a></li>
     						<li class="divider-vertical"></li>
     						<li><a href="#navbar">Navbar</a></li>
