--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -56,8 +56,7 @@
 
   <div class="form-actions">
     <%= f.submit "Sign up", :id => 'submit', :class => 'btn btn-primary' %>
+    or <%= link_to "Sign in", new_session_path(resource_name) %>
   </div>
   
 <% end %>
-
-<%= render "devise/shared/links" %>
