--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,12 +1,16 @@
 <h2>Resend confirmation instructions</h2>
 
-<%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
+<%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post, :class => 'form-horizontal' }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <div class='control-group'>
+    <%= f.label :email, :class=> 'control-label' %>
+    <div class='controls'>
+      <%= f.email_field :email, :autofocus => true %>
+    </div>
+  </div>
 
-  <div><%= f.submit "Resend confirmation instructions" %></div>
+  <div class="form-actions">
+    <%= f.submit "Resend confirmation instructions", :class => 'btn btn-primary' %>
+  </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
