--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,9 +34,9 @@
     					<ul class="nav pull-right">
                 <% if signed_in? %>
                   <li><a href="#">My Account</a></li>
-                  <li><a href="/members/sign_out">Sign Out</a></li>
+                  <li><%= link_to "Sign out", destroy_member_session_path, :method => :delete %></li>
                 <% else %>
-                  <li><a href="/members/sign_in">Sign In</a></li>
+                  <li><%= link_to "Sign in", new_member_session_path %></li>
                 <% end %>
     					</ul>
     				</div>
