Add link back to main website on frontpage.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,3 @@
-<h1>ODI Membership</h1>
+<div class='well'>
+  For ODI membership information, please visit <%= link_to 'http://theodi.org/join-us', 'http://theodi.org/join-us'%>
+</div>
