Fix footer links to point to the ODI site

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,10 +58,10 @@
     	<div class="container">
       	<nav>
     			<ul>
-    				<li><a href="/privacy-policy">Privacy Policy</a></li>
-    				<li><a href="/terms-of-use">Terms of Use</a></li>
-    				<li><a href="/cookie-policy">Cookie Policy</a></li>
-    				<li><a href="/feedback">Feedback</a></li>
+    				<li><a href="http://theodi.org/privacy-policy">Privacy Policy</a></li>
+    				<li><a href="http://theodi.org/terms-of-use">Terms of Use</a></li>
+    				<li><a href="http://theodi.org/cookie-policy">Cookie Policy</a></li>
+    				<li><a href="http://theodi.org/feedback">Feedback</a></li>
     			</ul>
     		</nav>
     		<p>
