--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,12 +3,7 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-horizontal'}) do |f| %>
   <%= devise_error_messages! %>
   
-  <div class="control-group">
-		<%= f.label :level, :class => 'control-label' %>
-		<div class="controls">
-			<%= f.text_field :level %>
-		</div>
-	</div>
+	<%= f.hidden_field :level, :value => params[:level] %>
   
   <fieldset>
   
