--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,8 +2,8 @@
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-horizontal'}) do |f| %>
   <%= devise_error_messages! %>
-  
-	<%= f.hidden_field :level, :value => params[:level] %>
+   
+	<%= f.hidden_field :level, :value => params[:level] || @member.level %>
   
   <fieldset>
 
