--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
               </ul>
     					<ul class="nav pull-right">
                 <% if signed_in? %>
-                  <li><a href="#">My Account</a></li>
+                  <li><a href="members/edit">My Account</a></li>
                   <li><%= link_to "Sign out", destroy_member_session_path, :method => :delete %></li>
                 <% else %>
                   <li><%= link_to "Sign in", new_member_session_path %></li>
