Put <section> tags aroud the main body
Closes #16

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,9 +49,9 @@
 
       <% if notice %><div class="alert alert-info"><%= notice %></div><% end %>
       <% if alert %><div class="alert alert-error"><%= alert %></div><% end %>
-
-      <%= yield %>
-
+	  <section>
+      	<%= yield %>
+  	  </section>
     </div>
 
     <footer id="footer">
