--- a/app/views/contact_requests/new.html.erb
+++ b/app/views/contact_requests/new.html.erb
@@ -5,42 +5,42 @@
 <%= form_for(@contact_request, :html => {:class => 'form-horizontal'}) do |f| %>
 
   <div class='control-group'>
-    <%= f.label :person_name %>
+    <%= f.label :person_name, :class => 'control-label' %>
     <div class='controls'>
       <%= f.text_field :person_name %>
     </div>
   </div>
   
   <div class='control-group'>
-    <%= f.label :person_affiliation %>
+    <%= f.label :person_affiliation, :class => 'control-label' %>
     <div class='controls'>
       <%= f.text_field :person_affiliation %>
     </div>
   </div>
   
   <div class='control-group'>
-    <%= f.label :person_email %>
+    <%= f.label :person_email, :class => 'control-label' %>
     <div class='controls'>
       <%= f.text_field :person_email %>
     </div>
   </div>
   
   <div class='control-group'>
-    <%= f.label :person_telephone %>
+    <%= f.label :person_telephone, :class => 'control-label' %>
     <div class='controls'>
       <%= f.text_field :person_telephone %>
     </div>
   </div>
   
   <div class='control-group'>
-    <%= f.label :person_job_title %>
+    <%= f.label :person_job_title, :class => 'control-label' %>
     <div class='controls'>
       <%= f.text_field :person_job_title %>
     </div>
   </div>
   
   <div class='control-group'>
-    <%= f.label :comment_text %>
+    <%= f.label :comment_text, :class => 'control-label' %>
     <div class='controls'>
       <%= f.text_field :comment_text %>
     </div>
