--- a/app/views/contact_requests/new.html.erb
+++ b/app/views/contact_requests/new.html.erb
@@ -1,5 +1,10 @@
 <h1>Contact us</h1>
 
+<p>
+  We're glad that you're interested in becoming a member of the ODI. We'd love to talk to you to discuss 
+  how we can work together. Fill in the form below, and we'll be in touch as soon as we can.
+</p>
+
 <%= error_messages(@contact_request) %>
 
 <%= form_for(@contact_request, :html => {:class => 'form-horizontal'}) do |f| %>
