Fix create page and message

--- a/app/views/contact_requests/create.html.erb
+++ b/app/views/contact_requests/create.html.erb
@@ -1,5 +1,5 @@
-<p id="notice"><%= notice %></p>
+<h1>Thanks</h1>
 
-
-<%= link_to 'Edit', edit_contact_request_path(@contact_request) %> |
-<%= link_to 'Back', contact_requests_path %>
+<p>
+  Thanks for getting in touch. We'll give you a call soon to discuss how we can work together.
+</p>
