--- a/app/views/contact_requests/new.html.erb
+++ b/app/views/contact_requests/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Contact us</h1>
 
 <p>
-  We're glad that you're interested in becoming a member of the ODI. We'd love to talk to you to discuss 
+  We're delighted that you would like to join us at ODI. We'd love to talk to you to discuss 
   how we can work together. Fill in the form below, and we'll be in touch as soon as we can.
 </p>
 
