--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -38,9 +38,9 @@
   <legend>Billing Address</legend>
     
   <div class="control-group">
-  	<%= f.label :address_line1, :class => 'control-label' %>
+  	<%= f.label :street_address, :class => 'control-label' %>
   	<div class="controls">
-  		<%= f.text_field :address_line1 %>
+  		<%= f.text_field :street_address %>
   	</div>
   </div>
 
