--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -25,9 +25,9 @@
   </div>
 
   <div class="control-group">
-  	<%= f.label :phone, :class => 'control-label' %>
+  	<%= f.label :telephone, :class => 'control-label' %>
   	<div class="controls">
-  		<%= f.text_field :phone %>
+  		<%= f.text_field :telephone %>
   	</div>
   </div>
 
