--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -79,9 +79,9 @@
   <legend>Financial information</legend>
     
   <div class="control-group">
-  	<%= f.label :tax_number, :class => 'control-label' %>
+  	<%= f.label :organisation_vat_id, :class => 'control-label' %>
   	<div class="controls">
-  		<%= f.text_field :tax_number %>
+  		<%= f.text_field :organisation_vat_id %>
   	</div>
   </div>
 
