--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -45,9 +45,9 @@
   </div>
 
   <div class="control-group">
-  	<%= f.label :address_city, :class => 'control-label' %>
+  	<%= f.label :address_locality, :class => 'control-label' %>
   	<div class="controls">
-  		<%= f.text_field :address_city %>
+  		<%= f.text_field :address_locality %>
   	</div>
   </div>
 
