--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -66,9 +66,9 @@
   </div>
 
   <div class="control-group">
-  	<%= f.label :address_postcode, :class => 'control-label' %>
+  	<%= f.label :postal_code, :class => 'control-label' %>
   	<div class="controls">
-  		<%= f.text_field :address_postcode %>
+  		<%= f.text_field :postal_code %>
   	</div>
   </div>
 
