--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-horizontal'}) do |f| %>
   <%= devise_error_messages! %>
    
-	<%= f.hidden_field :level, :value => params[:level] || @member.level %>
+	<%= f.hidden_field :product_name, :value => params[:level] || @member.product_name %>
   
   <%= render :partial => 'member_details', :locals => { :f => f } %>
   
