--- a/app/views/contact_requests/new.html.erb
+++ b/app/views/contact_requests/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Contact us</h1>
 
-<p>
+<p class="lead">
   We're delighted that you would like to join us at ODI. We'd love to talk to you to discuss 
   how we can work together. Fill in the form below, and we'll be in touch as soon as we can.
 </p>
