--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,12 @@
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-horizontal'}) do |f| %>
   <%= devise_error_messages! %>
+  <p class="lead">
+	 We're delighted that you would like to join the ODI. We just need a few details from you before we can confirm your membership.  
+  </p>
+  <p class="lead">
+	  This won't take longer than a couple of minutes!
+  </p>
    
 	<%= f.hidden_field :product_name, :value => params[:level] || @member.product_name %>
   
