Typos and test PR

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -2,7 +2,7 @@
 
 <p>Congratulations on joining us at the Open Data Institute. You have just become part of one the most exciting communities in Open Data in the world! We run a lecture series every Friday highlighting some of the awe inspiring work going on using Open Data - everything from data as art, through to how to how the CTO of the World Bank giving a 'fireside chat' about his experience at the White House. You can register for upcoming talks here: http://www.theodi.org/lunchtime-lectures </p>
 
-<p>As with everything we do we are continously developing our membership offer so we should kep delivering more value. To give you the inside track on the next few months we will be adding:</p>
+<p>As with everything we do we are continuously developing our membership offer so we should keep delivering more value. To give you the inside track on the next few months we will be adding:</p>
 
 <ul>
 	<li>A directory of members - so you can advertise your services to the world</li>
