Reflecting @jenit comments
Picking up some of the comments @jenit made on the terms and
conditions. *Not* done a methodical check yet and will need to see it
rendered on the page.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -45,15 +45,19 @@
 		Whereas ODI seeks to admit members to its organisation and to work with and provide services to them;
 	</p>
 	<p>
-		Whereas Member wishes to be admitted as a Partner member of the ODI organisation;
+		Whereas [ORGANISATION NAME] wishes to be admitted as a [TIER] of the ODI organisation;
 	</p>
 	<ol>
 		<li>Member agrees to pay an annual membership subscription of [AMOUNT].
 		</li>
 		<li>The General Terms and Conditions of Membership as set out in Schedule 1 are incorporated in and shall form part of this Agreement.
 		</li>
-		<li>All notices or other communications to or upon either party shall be in email and writing to ODI: 3rd Floor, 65 Clifton Street, London, EC2A 4JE and members@theodi.org Member: email address registered on their account
+		<li>All notices or other communications to or upon either party shall be in email and writing to
 		</li>
+			<ul>
+				<li>ODI: 3rd Floor, 65 Clifton Street, London, EC2A 4JE and members@theodi.org</li>
+				<li> Member: email address registered on their account</li>
+			</ul>
 		<li>Member warrants and undertakes that it is and will, throughout the period of its membership, remain in compliance with the eligibility criteria for its category of membership as set out in the document attached to this Agreement and further that it will throughout the period of membership comply fully with all its responsibilities and obligations set out in the Agreement and abide by the terms and conditions as set out in this Agreement.
 		</li>
 	</ol>
@@ -110,9 +114,9 @@
 			<ol>
 				<li>Partner: £50,000 per annum of which up to £15,000 per annum may be payment in kind
 				</li>
-				<li>Sponsor: £25,000 per annum of which up to £7,500 may be payment in kind.
+				<li>Sponsor: £25,000 per annum of which up to £7,500 may be payment in kind
 				</li>
-				<li>Member: £4,800 per annum.
+				<li>Member: £4,800 per annum
 				</li>
 				<li>Supporter: £540 per annum
 				</li>
@@ -153,9 +157,9 @@
 		<h5>
 			Training and professional services vouchers
 		</h5>
-		<li>Partners shall receive training and professional services vouchers worth £18,000 annually
+		<li>Partners shall receive training and professional services vouchers worth £18,000 annually.
 		</li>
-		<li>Sponsors shall receive training and professional services vouchers worth £7,000 annually
+		<li>Sponsors shall receive training and professional services vouchers worth £7,000 annually.
 		</li>
 		<li>Members shall receive training and professional services vouchers worth £1,000 annually.
 		</li>
@@ -174,13 +178,11 @@
 				</li>
 				<li style="list-style: none">
 					<ul>
-						<li>Partner names and logos shall be displayed on the ODI website
+						<li>Partner names and logos shall be displayed on the ODI website.
 						</li>
-						<li>Partner will be entitled to headline (on a non-exclusive basis) with the ODI
+						<li>Partner will be entitled to headline (on a non-exclusive basis) with the ODI Annual Summit.
 						</li>
-						<li style="list-style: none">Annual Summit.
-						</li>
-						<li>Partner shall be responsible for providing appropriate event branding collateral
+						<li>Partner shall be responsible for providing appropriate event branding collateral.
 						</li>
 					</ul>
 				</li>
@@ -209,7 +211,7 @@
 				</li>
 				<li>Sponsors may send up to 2 attendees, and nominate up to 1 speaker
 				</li>
-				<li>Members and Supporter organisations may send 1 attendee.
+				<li>Members and Supporter organisations may send 1 attendee
 				</li>
 				<li>All persons attending on behalf of an organisations member must be a director and/ or an employee of the organisation
 				</li>
@@ -221,11 +223,11 @@
 		</li>
 		<li style="list-style: none">
 			<ol>
-				<li>Partners may send 3 attendees and shall be entitled to brand as a Platinum Sponsor;
+				<li>Partners may send 3 attendees and shall be entitled to brand as a Platinum Sponsor
 				</li>
-				<li>Sponsors may send 2 attendees and shall be entitled to brand as a Sponsor; and
+				<li>Sponsors may send 2 attendees and shall be entitled to brand as a Sponsor
 				</li>
-				<li>Members and Supporters may send 1 attendee.
+				<li>Members and Supporters may send 1 attendee
 				</li>
 			</ol>
 		</li>
