Adding email as a field in the Terms and Conditions

--- a/app/views/devise/registrations/_terms.html.haml
+++ b/app/views/devise/registrations/_terms.html.haml
@@ -9,7 +9,7 @@
 	  2. The General Terms and Conditions of Membership as set out in Schedule 1 are incorporated in and shall form part of this Agreement. 
 	  3. All notices or other communications to or upon either party shall be in email and writing to 
 	    * ODI: 3rd Floor, 65 Clifton Street, London, EC2A 4JE and members@theodi.org
-	    * Member: email address registered on their account
+	    * Member: [EMAIL]
 	  4. Member warrants and undertakes that it is and will, throughout the period of its membership, remain in compliance with the eligibility criteria for its category of membership as set out in the document attached to this Agreement and further that it will throughout the period of membership comply fully with all its responsibilities and obligations set out in the Agreement and abide by the terms and conditions as set out in this Agreement. 
 
 	###  Schedule 1
